--- a/projects.json
+++ b/projects.json
@@ -1,5 +1,12 @@
 {
-    "dfgh": [
-        "sdfghj"
+    "SDfgh": [
+        "meow"
+    ],
+    "Sdfgh": [
+        "DFGHJk@gmail.com"
+    ],
+    "w@gmail.com": [
+        "ali",
+        "yui"
     ]
 }
