--- a/projects.json
+++ b/projects.json
@@ -9,6 +9,8 @@
         "ali",
         "yui",
         "sdfghj",
-        "DFGhjk"
+        "DFGhjk",
+        "aw",
+        "jg"
     ]
-}Save operation performed on file: projects.json in 19:15:05.003321 in 2024-05-23
+}
